[tool.poetry]
name = "mlxp"
version = "0.1.0"
description = "Repo for various ML experiments."
authors = ["Evan Crook <evannc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
